# pet_app

./: .env.example  .gitignore  LICENSE  PRD.md  README.md  docker-compose.yml
apps/agent/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/agent/app/: __init__.py  agent.py  main.py  prompts.py  schemas.py
apps/agent/app/services/: audit_logger.py  json_parser.py  reasoning.py
apps/agent/app/tools/: __init__.py  fallback_mongo.py  mongodb_mcp.py
apps/web/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/agent/daily-summary/: route.ts
apps/web/src/app/api/agent/emergency-summary/: route.ts
apps/web/src/app/api/agent/lost-dog-plan/: route.ts
apps/web/src/app/api/care-plans/: route.ts
apps/web/src/app/api/check-ins/: route.ts
apps/web/src/app/api/uploads/: route.ts
apps/web/src/app/caregiver/[shareToken]/: loading.tsx  page.tsx
apps/web/src/app/emergency/[planId]/: loading.tsx  page.tsx
apps/web/src/app/owner/new/: page.tsx
apps/web/src/components/: AppHeader.tsx  CarePlanForm.tsx  CheckInForm.tsx  CopyLinkButton.tsx  DemoButtons.tsx  DemoQuickLinks.tsx  DogProfileForm.tsx  EmergencyForm.tsx  EmptyState.tsx  GeneratedPlanCard.tsx  HeaderPlanLinks.tsx  LoadingState.tsx  LostDogPlanCard.tsx  OwnerCreateForm.tsx  OwnerDashboardSummary.tsx  StatusBadge.tsx  TaskCard.tsx  VetSummaryCard.tsx
apps/web/src/lib/: agent.ts
apps/web/src/types/: index.ts
(+8 files in other folders)
